<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>

    <!-- settings -->
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_summary">Change this to a postal or zip code to get forecasts for that area.</string>
    <string name="pref_location_default">R3T5N6</string>
    <string name="pref_units_title">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_default">@string/pref_units_metric</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- misc -->
    <string name="title_activity_detail">Daily Forecast</string>
    <string name="title_activity_settings">Settings</string>
    <string name="loading_text">LOADING…</string>

    <!-- labels -->
    <string name="label_high">High:</string>
    <string name="label_low">Low:</string>
    <string name="label_morning">Morning:</string>
    <string name="label_day">Day:</string>
    <string name="label_evening">Evening:</string>
    <string name="label_night">Night:</string>
    <string name="label_pressure">Pressure (hPa):</string>
    <string name="label_humidity">Humidity (%):</string>
    <string name="label_description">Weather conditions:</string>
    <string name="label_wind">Wind (mps):</string>
    <string name="label_clouds">Cloudiness (%):</string>
    <string name="label_precipitation">Precipitation (per 3 hours)</string>
    <string name="label_rain">Rain (mm):</string>
    <string name="label_snow">Snow (mm):</string>

    <!-- buttons -->
    <string name="button_done">Done</string>

</resources>
