<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jorwoody.sunshine.app.activities.DetailActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/detail_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/bg_detail_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <!-- Weather -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:layout_marginLeft="@dimen/details_horizontal_margin"
        android:layout_marginRight="@dimen/details_horizontal_margin">

        <ImageView
            android:id="@+id/detail_weather_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:padding="@dimen/details_padding"
            android:layout_gravity="right"
            android:background="@color/bg_weather_icon"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_marginTop="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/separator_margin"
        android:background="@color/bg_separator"/>

    <!-- Temperatures -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/details_horizontal_margin"
        android:layout_marginRight="@dimen/details_horizontal_margin">

        <!-- High temp -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_high"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Low temp -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_low"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Morning temp -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_morning"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Day temp -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_day"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Evening temp -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_evening"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_evening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Night temp -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_night"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_marginTop="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/separator_margin"
        android:background="@color/bg_separator"/>

    <!-- Atmosphere -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/details_horizontal_margin"
        android:layout_marginRight="@dimen/details_horizontal_margin">

        <!-- Pressure -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pressure"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Humidity -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_humidity"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Cloudiness -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_clouds"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_clouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_marginTop="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/separator_margin"
        android:background="@color/bg_separator"/>

    <!-- Wind conditions -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/details_horizontal_margin"
        android:layout_marginRight="@dimen/details_horizontal_margin">

        <!-- Wind -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/label_wind"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_marginTop="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/separator_margin"
        android:background="@color/bg_separator"/>

    <!-- Precipitation -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/details_horizontal_margin"
        android:layout_marginRight="@dimen/details_horizontal_margin">

        <!-- Precipitation -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_precipitation"
            android:textStyle="bold"/>

        <!-- Rain -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_rain"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

        <!-- Snow -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_snow"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_snow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/details_padding"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
